--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,7 +3,7 @@
 # the repo. Unless a later match takes precedence,
 # they will be requested for review when someone 
 # opens a pull request.
-*       @Utwo @aniri @RaduCStefanescu
+*       @Utwo @aniri @RaduCStefanescu @moonflare
 
 # More details on creating a codeowners file:
 # https://help.github.com/en/github/creating-cloning-and-archiving-repositories/about-code-owners
