Add docker-compose, Dockerfile and Dockerfile.prod. Update readme

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=diaspora-hub-db
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=diaspora_db
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=123123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
