--- a/backend/composer.json
+++ b/backend/composer.json
@@ -19,6 +19,7 @@
         "fzaninotto/faker": "^1.9.1",
         "laravel/telescope": "^3.2",
         "mockery/mockery": "^1.3.1",
+        "mpociot/laravel-apidoc-generator": "^4.5",
         "nunomaduro/collision": "^4.1",
         "phpunit/phpunit": "^8.5"
     },
