--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^7.0",
         "laravel/nova": "~3.0",
         "laravel/tinker": "^2.0",
+        "lorisleiva/laravel-deployer": "^0.3.2",
         "malhal/laravel-geographical": "^1.0"
     },
     "require-dev": {
