--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,4 +1,4 @@
-name: Production Build and Deploy
+name: deploy frontend
 on:
   push:
     branches:
@@ -10,17 +10,18 @@ env:
   AWS_S3_BUCKET_PROD: ${{ secrets.AWS_S3_BUCKET_PROD }}
   DISTRIBUTION_ID_TEST: ${{ secrets.DISTRIBUTION_ID_TEST }}
   DISTRIBUTION_ID_PROD: ${{ secrets.DISTRIBUTION_ID_PROD }}
-  PATHS: '/*'
+  PATHS: "/*"
   SOURCE_DIR: "./frontend/build"
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_REGION: ${{ secrets.AWS_REGION }}
 
 jobs:
-  deploy:
+  deploy-stage:
     runs-on: ubuntu-latest
     env:
       working-directory: "./frontend"
+    if: github.ref == 'refs/heads/develop'
     steps:
       - uses: actions/checkout@v2
 
@@ -40,9 +41,10 @@ jobs:
       - name: Build
         working-directory: ${{env.working-directory}}
         run: npm run build
+        env:
+          REACT_APP_API_URL: "https://staging.diasporahub.ro/api/v1"
 
       - name: Deploy to S3 Staging
-        if: github.ref == 'refs/heads/develop'
         uses: jakejarvis/s3-sync-action@v0.5.1
         with:
           args: --acl public-read --delete
@@ -50,13 +52,38 @@ jobs:
           AWS_S3_BUCKET: $AWS_S3_BUCKET_TEST
 
       - name: Invalidate Cloudfront Staging
-        if: github.ref == 'refs/heads/develop'
         uses: muratiger/invalidate-cloudfront-and-wait-for-completion-action@master
         env:
           DISTRIBUTION_ID: $DISTRIBUTION_ID_TEST
 
+  deploy-production:
+    runs-on: ubuntu-latest
+    env:
+      working-directory: "./frontend"
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install node
+        uses: actions/setup-node@v1
+        with:
+          node-version: "12.x"
+
+      - name: Install Dependencies
+        working-directory: ${{env.working-directory}}
+        run: npm ci --no-audit
+
+      - name: Lint
+        working-directory: ${{env.working-directory}}
+        run: npm run lint
+
+      - name: Build
+        working-directory: ${{env.working-directory}}
+        run: npm run build
+        env:
+          REACT_APP_API_URL: "https://diasporahub.ro/api/v1"
+
       - name: Deploy to S3 Production
-        if: github.ref == 'refs/heads/master'
         uses: jakejarvis/s3-sync-action@v0.5.1
         with:
           args: --acl public-read --delete
@@ -64,7 +91,6 @@ jobs:
           AWS_S3_BUCKET: $AWS_S3_BUCKET_PROD
 
       - name: Invalidate Cloudfront Production
-        if: github.ref == 'refs/heads/master'
         uses: muratiger/invalidate-cloudfront-and-wait-for-completion-action@master
         env:
           DISTRIBUTION_ID: $DISTRIBUTION_ID_PROD
