--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -6,10 +6,6 @@ on: push
   #     - master
 
 env:
-  AWS_S3_BUCKET_TEST: ${{ secrets.AWS_S3_BUCKET_TEST }}
-  AWS_S3_BUCKET_PROD: ${{ secrets.AWS_S3_BUCKET_PROD }}
-  DISTRIBUTION_ID_TEST: ${{ secrets.DISTRIBUTION_ID_TEST }}
-  DISTRIBUTION_ID_PROD: ${{ secrets.DISTRIBUTION_ID_PROD }}
   PATHS: "/*"
   SOURCE_DIR: "./frontend/build"
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -49,7 +45,7 @@ jobs:
         with:
           args: --acl public-read --delete
         env:
-          AWS_S3_BUCKET: $AWS_S3_BUCKET_TEST
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET_TEST }}
 
       - name: Invalidate Cloudfront Staging
         uses: muratiger/invalidate-cloudfront-and-wait-for-completion-action@master
@@ -88,7 +84,7 @@ jobs:
         with:
           args: --acl public-read --delete
         env:
-          AWS_S3_BUCKET: $AWS_S3_BUCKET_PROD
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET_PROD }}
 
       - name: Invalidate Cloudfront Production
         uses: muratiger/invalidate-cloudfront-and-wait-for-completion-action@master
