--- a/.github/workflows/deploy-backend-staging.yml
+++ b/.github/workflows/deploy-backend-staging.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ~/.composer/cache/files
-          key: dependencies-composer-${{ hashFiles('composer.lock') }}
+          key: dependencies-composer-${{ hashFiles('backend/composer.lock') }}
 
       - name: Composer install
         working-directory: ${{ env.working-directory }}
