--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,8 @@
     "react-scripts": "3.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "craco start",
+    "build": "craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
@@ -61,6 +61,8 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^5.6.4",
+    "@fullhuman/postcss-purgecss": "^2.1.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
