--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,7 +1,7 @@
 {
   "build": {
     "env": {
-      "REACT_APP_API_URL": "https://diasporahub.ro/api/v1",
+      "REACT_APP_API_URL": "/api/v1",
       "ALGOLIA_APP_ID": "pl7PQT9Z4YFT",
       "ALGOLIA_API_KEY": "@algolia-api-key"
     }
