chore(backend): update dependencies

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,14 +1,26 @@
+/.idea
+/.vscode
+/coverage
 /node_modules
+/public/assets
 /public/hot
+/public/mix-manifest.json
 /public/storage
+/public/vendor
 /storage/*.key
 /vendor
+_ide_helper_models.php
+_ide_helper.php
 .env
 .env.backup
+.php_cs.cache
+.php-cs-fixer.cache
+.phpstorm.meta.php
 .phpunit.result.cache
+auth.json
+docker-compose.override.yml
 Homestead.json
 Homestead.yaml
 npm-debug.log
+phpunit.xml
 yarn-error.log
-.vscode
-auth.json
