--- a/backend/composer.json
+++ b/backend/composer.json
@@ -6,9 +6,9 @@
         "php": "^7.4",
         "dillingham/nova-attach-many": "^1.0",
         "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^1.0",
-        "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "^7.0",
+        "fruitcake/laravel-cors": "^2.0",
+        "guzzlehttp/guzzle": "^7.3",
+        "laravel/framework": "^8.62",
         "laravel/nova": "~3.0",
         "laravel/tinker": "^2.0",
         "lorisleiva/laravel-deployer": "^0.3.2",
@@ -16,13 +16,14 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
-        "facade/ignition": "^2.0",
-        "fzaninotto/faker": "^1.9.1",
-        "laravel/telescope": "^3.2",
+        "barryvdh/laravel-ide-helper": "^2.10",
+        "facade/ignition": "^2.13",
+        "fakerphp/faker": "^1.16",
+        "friendsofphp/php-cs-fixer": "^3.1",
+        "laravel/telescope": "^4.6",
         "mockery/mockery": "^1.3.1",
-        "mpociot/laravel-apidoc-generator": "^4.5",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.0"
     },
     "repositories": [
         {
@@ -44,7 +45,9 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
         },
         "classmap": [
             "database/seeds",
@@ -68,6 +71,12 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "@php artisan ide-helper:generate",
+            "@php artisan ide-helper:meta",
+            "@php artisan ide-helper:models --nowrite"
         ]
     }
 }
